<resources>
    <string name="app_name">跑腿校园</string>
    <string name="account">我的</string>
    <string name="order">跑腿</string>
    <string name="home">首页</string>
    <string name="comment">评论</string>
    <string name="remind">消息</string>
    <string name="home_head_get">拿取件</string>
    <string name="home_head_purchasing">代购</string>
    <string name="home_head_release">我要发布</string>
    <string name="loading">正在加载中</string>
    <string name="load_failed">加载失败</string>
    <string name="get">拿取件</string>
    <string name="back">返回</string>
    <string name="release">发布</string>
    <string name="new_address">新增地址</string>
    <string name="confirm">确定</string>
    <string name="House_number">门牌号</string>
    <string name="House_number_example">例：5号楼302室</string>
    <string name="save">保存</string>
    <string name="address">地址</string>
    <string name="address_example">选择收货地址</string>
    <string name="phone_number">电话</string>
    <string name="phone_number_example">手机号码</string>
    <string name="gentlemen">先生</string>
    <string name="ladies">女士</string>
    <string name="Contact_name">联系人</string>
    <string name="Contact_name_example">姓名</string>
    <string name="modify_address">修改地址</string>
    <string name="add_new_address">新增地址</string>
    <string name="women">女</string>
    <string name="man">男</string>
    <string name="cancel">取消</string>
    <drawable name="tab_bg">#41434e</drawable>
</resources>
