<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toTopOf="@+id/Relative_layout_home_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.youth.banner.Banner>


    <RelativeLayout
        android:id="@+id/Relative_layout_home_head"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintTop_toBottomOf="@+id/banner">
        <LinearLayout
            android:id="@+id/home_head_release_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >
            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_head_release"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/home_head_bt_layout"
            android:layout_below="@+id/home_head_release_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            >
            <Button
                android:id="@+id/bt_home_head_get"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/home_head_get"
                android:background="@drawable/button_style_one"
                android:layout_toLeftOf="@+id/white_view"
                android:layout_marginRight="20dp"
                />
            <View
                android:id="@+id/white_view"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/bt_home_head_purchasing"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_style_one"
                android:text="@string/home_head_purchasing"
                android:layout_toRightOf="@+id/white_view"
                android:layout_marginLeft="20dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/light_grey"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/home_head_bt_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
           <!--<LinearLayout
               android:id="@+id/comment_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="20dp"
               >
               <ImageView
                   android:id="@+id/img_home_head_comment"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/comment_unselected"
                   android:layout_gravity="center_vertical"
                   />
               <TextView
                   android:id="@+id/tv_home_head_comment"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:textSize="18dp"
                   android:text="@string/comment"
                   android:gravity="center"
                   />
           </LinearLayout>-->
            <RelativeLayout
                android:id="@+id/remind_layout"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/img_home_head_remind"
                    android:layout_toRightOf="@+id/tv_home_head_remind"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/message"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:id="@+id/tv_home_head_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/remind"
                    />

            </RelativeLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_grey"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>